--- a/.github/workflows/setup_build.yml
+++ b/.github/workflows/setup_build.yml
@@ -17,10 +17,10 @@ jobs:
 
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.8'
+          python-version: '3.12'
 
       - name: Install CEA to python environment
-        run: pip install .
+        run: pip install . --no-deps
 
       - name: Get CEA version
         shell: bash
@@ -127,10 +127,10 @@ jobs:
 
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.8'
+          python-version: '3.12'
 
       - name: Install CEA to python environment
-        run: pip install ${{ github.workspace }}/cea
+        run: pip install ${{ github.workspace }}/cea --no-deps
 
       - name: Get CEA version
         shell: bash
