--- a/.github/workflows/setup_build.yml
+++ b/.github/workflows/setup_build.yml
@@ -19,7 +19,7 @@ jobs:
       
       - name: Get CEA version
         id: version
-        run: echo "version=$(grep __version__ cea/__init__.py | cut -d'\"' -f2)" >> "$GITHUB_OUTPUT"
+        run: echo "version=$(grep __version__ cea/__init__.py | cut -d'"' -f2)" >> "$GITHUB_OUTPUT"
       
       - name: Print CEA version
         run: 'echo "CEA Version: ${{ steps.version.outputs.version }}"'
