add more accurate kbob source and material mapping

--- a/cea/default.config
+++ b/cea/default.config
@@ -146,7 +146,7 @@ insulation-thickness.help = Thickness of the insulation to use for the new const
 
 cladding-type = plaster
 cladding-type.type = ChoiceParameter
-cladding-type.choices = plaster, aluminium, steel, glass, stone, brick, wood, none
+cladding-type.choices = plaster, aluminium, stainless steel, glass, stone, masonry, wood, ceramic, none
 cladding-type.help = Type of cladding to use for the new constructions. 
     Note that the cladding type is different from the building structure type. For example, a concrete building can have 
     a brick cladding. if the cladding type is set to "none", the new constructions will not have a cladding.
