Add 'uv venv' step to build workflow
Introduces the 'uv venv' command before installing dependencies and building the wheel in the setup_build GitHub Actions workflow. This ensures a virtual environment is created for the build process.

--- a/.github/workflows/setup_build.yml
+++ b/.github/workflows/setup_build.yml
@@ -70,6 +70,7 @@ jobs:
 
       - name: Create wheel of CEA
         run: |
+          uv venv
           uv pip install pyarrow
           uv build
           WHEEL_FILE=$(basename $(ls dist/cityenergyanalyst-*.whl))
