--- a/.github/workflows/setup_build.yml
+++ b/.github/workflows/setup_build.yml
@@ -69,6 +69,7 @@ jobs:
           python-version: 3.12
 
       - name: Create wheel of CEA
+        shell: bash
         run: |
           uv venv
           uv pip install pyarrow
