Set CMAKE_PREFIX_PATH for pyarrow in CI build
Adds steps to activate the virtual environment and set CMAKE_PREFIX_PATH to the pyarrow library directory before building. This ensures that build tools can locate pyarrow dependencies during the CI process.

--- a/.github/workflows/setup_build.yml
+++ b/.github/workflows/setup_build.yml
@@ -73,6 +73,9 @@ jobs:
         run: |
           uv venv
           uv pip install pyarrow
+          source .venv/bin/activate
+          PYARROW_PATH=$(python -c "import pyarrow; print(pyarrow.get_library_dirs()[0])")
+          export CMAKE_PREFIX_PATH="$PYARROW_PATH:$CMAKE_PREFIX_PATH"
           uv build
           WHEEL_FILE=$(basename $(ls dist/cityenergyanalyst-*.whl))
           echo "WHEEL_FILE=$WHEEL_FILE" >> "$GITHUB_ENV"
