Update DAYSIM and CRAX source dir variables in messages
Changed status messages to display DAYSIM_FINAL_SOURCE_DIR and CRAX_FINAL_SOURCE_DIR instead of the previous source directory variables for improved accuracy.

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -104,10 +104,10 @@ message(STATUS "  Platform: ${CEA_PLATFORM_DIR}")
 message(STATUS "  Build DAYSIM: ${BUILD_DAYSIM}")
 message(STATUS "  Build CRAX: ${BUILD_CRAX}")
 if(BUILD_DAYSIM)
-    message(STATUS "  DAYSIM source: ${DAYSIM_SOURCE_DIR}")
+    message(STATUS "  DAYSIM source: ${DAYSIM_FINAL_SOURCE_DIR}")
 endif()
 if(BUILD_CRAX)
-    message(STATUS "  CRAX source: ${CRAX_SOURCE_DIR}")
+    message(STATUS "  CRAX source: ${CRAX_FINAL_SOURCE_DIR}")
 endif()
 message(STATUS "  Install prefix: ${CMAKE_INSTALL_PREFIX}")
 message(STATUS "")
