Enable verbose pip install in CI workflow
Adds the -v flag to the pip install command in the CI workflow to provide more detailed output during package installation. This can help with debugging installation issues.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
           cache: true
 
       - name: Install CEA
-        run: pixi run pip install .
+        run: pixi run pip install -v .
 
       - name: Run unit tests
         run: pixi run cea test --type unittest
