--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,30 +92,8 @@ build-backend = "scikit_build_core.build"
 provider = "scikit_build_core.metadata.regex"
 input = "cea/__init__.py"
 
-# Scikit-build-core configuration
-[tool.scikit-build]
-# Only install the cea_targets component (manually defined in our CMakeLists.txt)
-install.components = ["cea_targets", "crax_targets"]
-wheel.packages = ["cea"]
-# Set persistent build directory for caching
-build-dir = "build"
-
-[tool.scikit-build.build]
-# Only build the cea_targets target, not all targets (avoids unwanted programs)
-targets = ["cea_all"]
-# Verbose output for debugging
-verbose = false
-
-[tool.scikit-build.cmake]
-# Use external/ directory for CMake source
-source-dir = "external"
-# Build in Release mode for performance
-build-type = "Release"
-# Use env vars for source directories
-define = {DAYSIM_SOURCE_DIR = {env="DAYSIM_SOURCE_DIR"}, CRAX_SOURCE_DIR = {env="CRAX_SOURCE_DIR"}}
-
 [tool.ruff]
-exclude = ["*.ipynb"]
+exclude = ["*.ipynb", "external/"]
 lint.ignore = [
     "E741", # ambiguous variable name (l, O, I)
 ]
@@ -135,7 +113,7 @@ test = "cea test --type integration"
 
 # Development tasks
 lint = {cmd = "ruff check --fix ."}
-setup-dev = {cmd = "CMAKE_BUILD_PARALLEL_LEVEL=4 uv pip install -ve . --group dev --no-build-isolation"}
+setup-dev = {cmd = "pip install -ve . --group dev"}
 build-wheel = {cmd = "uv build"}
 export-spec = {cmd = "pixi workspace export conda-explicit-spec --ignore-pypi-errors conda-spec"}
 export-conda = {cmd = "pixi workspace export conda-environment environment.yml"}
