Make install paths configurable via INSTALL_BIN_DIR
Replaced hardcoded 'cea/radiation/bin' install paths in CraxConfig.cmake and DaysimConfig.cmake with the INSTALL_BIN_DIR variable. Updated pyproject.toml to define INSTALL_BIN_DIR as 'cea_external_tools/bin' for more flexible installation configuration.

--- a/external/pyproject.toml
+++ b/external/pyproject.toml
@@ -32,8 +32,8 @@ verbose = false
 [tool.scikit-build.cmake]
 # Build in Release mode for performance
 build-type = "Release"
-# Use env vars for source directories
-#define = {DAYSIM_SOURCE_DIR = {env="DAYSIM_SOURCE_DIR"}, CRAX_SOURCE_DIR = {env="CRAX_SOURCE_DIR"}}
+# Define CMake variables that control installation paths
+define = {INSTALL_BIN_DIR = "cea_external_tools/bin"}
 
 [tool.pixi.workspace]
 channels = ["conda-forge"]
