--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,12 +85,41 @@ cea-worker = "cea.worker:main"
 cea-plot = "cea.plots.plot_cli:main"
 
 [build-system]
-requires = ["scikit-build-core>=0.11.0"]
-build-backend = "scikit_build_core.build"
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
 
-[tool.scikit-build.metadata.version]
-provider = "scikit_build_core.metadata.regex"
-input = "cea/__init__.py"
+[tool.setuptools.packages.find]
+include = ["cea*"]
+namespaces = false
+
+[tool.setuptools.package-data]
+cea = [
+    # Configuration files
+    "default.config",
+    "schemas.yml",
+    "scripts.yml",
+    "workflows/*.yml",
+
+    # Data files
+    "examples/*.zip",
+    # TODO: Move generate weather data script to scripts directory, should not be in package
+    "datamanagement/weather_helper/weather.geojson",
+    "databases/**/*.csv",
+    "databases/weather/**/*.epw",
+
+    # Compiled binaries
+    "resources/radiation/bin/**/*",
+    "resources/radiationCRAX/bin/**/*",
+
+    # Web assets
+    "interfaces/dashboard/plots/templates/*.html",
+    "plots/*.html",
+
+    "plots/naming.csv",
+]
+
+[tool.setuptools.dynamic]
+version = { attr = "cea.__version__" }
 
 [tool.ruff]
 exclude = ["*.ipynb", "external/"]
@@ -146,5 +175,4 @@ gdal = "*"
 # Development tools (pixi-only)
 notebook = "*"
 pixi-pycharm = ">=0.0.8,<0.0.9" # for pycharm support
-scikit-build-core = ">=0.11.0"
 uv = "*"
