--- a/.github/workflows/build-external-tools.yml
+++ b/.github/workflows/build-external-tools.yml
@@ -24,6 +24,15 @@ jobs:
 
     - name: Setup pixi
       uses: prefix-dev/setup-pixi@v0.8.14
+    
+    # CRAX requires at least c++ 23 standard features
+    - name: Install g++-13 (macOS Intel)
+      if: matrix.os == 'macos-13'
+      run: |
+        brew install gcc@13
+        # Set environment variables to use g++-13
+        echo "CC=gcc-13" >> $GITHUB_ENV
+        echo "CXX=g++-13" >> $GITHUB_ENV
 
     - name: Build wheel
       working-directory: external
