--- a/.github/workflows/build-external-tools.yml
+++ b/.github/workflows/build-external-tools.yml
@@ -3,13 +3,13 @@ name: Build and Publish CEA External Tools
 on:
   push:
     tags:
-      - 'external-v*'  # Trigger on external tool version tags
+      - "external-v*" # Trigger on external tool version tags
     paths:
-      - 'external/**'
+      - "external/**"
   pull_request:
     paths:
-      - 'external/**'
-  workflow_dispatch:  # Allow manual triggering
+      - "external/**"
+  workflow_dispatch: # Allow manual triggering
 
 jobs:
   build-wheels:
@@ -17,65 +17,65 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest, macos-13]  # macos-13 for x86_64, macos-latest for arm64
+        os: [ubuntu-latest, windows-latest, macos-latest, macos-13] # macos-13 for x86_64, macos-latest for arm64
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Setup pixi
-      uses: prefix-dev/setup-pixi@v0.8.14
-    
-    # CRAX requires at least c++ 23 standard features
-    - name: Install g++-13 (macOS Intel)
-      if: matrix.os == 'macos-13'
-      run: |
-        brew install gcc@13
-        # Set environment variables to use g++-13
-        echo "CC=gcc-13" >> $GITHUB_ENV
-        echo "CXX=g++-13" >> $GITHUB_ENV
+      - name: Setup pixi
+        uses: prefix-dev/setup-pixi@v0.8.14
 
-    - name: Build wheel
-      working-directory: external
-      run: pixi run build-wheel
-      env:
-        # Set parallel build jobs
-        CMAKE_BUILD_PARALLEL_LEVEL: 4
-        # Enable verbose output for debugging if needed
-        VERBOSE: 1
+      # CRAX requires at least c++ 23 standard features
+      - name: Install g++-13 (macOS Intel)
+        if: matrix.os == 'macos-13'
+        run: |
+          brew install gcc@13
+          # Set environment variables to use g++-13
+          echo "CC=gcc-13" >> $GITHUB_ENV
+          echo "CXX=g++-13" >> $GITHUB_ENV
 
-    - name: Upload wheel artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: wheels-${{ matrix.os }}
-        path: external/dist/*.whl
-        retention-days: 7
+      - name: Build wheel
+        working-directory: external
+        run: pixi run build-wheel
+        env:
+          # Set parallel build jobs
+          CMAKE_BUILD_PARALLEL_LEVEL: 4
+          # Enable verbose output for debugging if needed
+          VERBOSE: 1
+
+      - name: Upload wheel artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: wheels-${{ matrix.os }}
+          path: external/dist/*.whl
+          retention-days: 7
 
   build-source:
     name: Build source distribution
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.12'
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
 
-    - name: Install build dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install build
+      - name: Install build dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install build
 
-    - name: Build source distribution
-      working-directory: external
-      run: python -m build --sdist
+      - name: Build source distribution
+        working-directory: external
+        run: python -m build --sdist
 
-    - name: Upload source distribution
-      uses: actions/upload-artifact@v4
-      with:
-        name: source-dist
-        path: external/dist/*.tar.gz
-        retention-days: 7
+      - name: Upload source distribution
+        uses: actions/upload-artifact@v4
+        with:
+          name: source-dist
+          path: external/dist/*.tar.gz
+          retention-days: 7
 
   test-wheels:
     name: Test wheels
@@ -85,24 +85,24 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest, macos-13]
         # python-version: ['3.10', '3.11', '3.12']
-        python-version: ['3.12'] # Test only 3.12 for now
+        python-version: ["3.12"] # Test only 3.12 for now
 
     steps:
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python-version }}
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
 
-    - name: Download wheel artifacts
-      uses: actions/download-artifact@v4
-      with:
-        name: wheels-${{ matrix.os }}
-        path: wheels/
+      - name: Download wheel artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: wheels-${{ matrix.os }}
+          path: wheels/
 
-    - name: Test wheel
-      run: |
-        python -m pip install wheels/*.whl
-        python -c "import cea_external_tools; print(f'✓ Package version: {cea_external_tools.__version__}')"
+      - name: Test wheel
+        run: |
+          python -m pip install wheels/*.whl
+          python -c "import cea_external_tools; print(f'✓ Package version: {cea_external_tools.__version__}')"
 
   # publish-test-pypi:
   #   name: Publish to Test PyPI
@@ -136,13 +136,13 @@ jobs:
       url: https://pypi.org/p/cea-external-tools
 
     steps:
-    - name: Download all artifacts
-      uses: actions/download-artifact@v4
-      with:
-        path: dist
-        merge-multiple: true
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: dist
+          merge-multiple: true
 
-    - name: Publish to PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        packages-dir: dist/
+      - name: Publish to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          packages-dir: dist/
