Disable pixi run-install in CI workflow
Updated the build-external-tools GitHub Actions workflow to set 'run-install: false' for the setup-pixi step. This change prevents automatic installation of CEA environment during setup. We will manually do it in the later steps.

--- a/.github/workflows/build-external-tools.yml
+++ b/.github/workflows/build-external-tools.yml
@@ -26,7 +26,9 @@ jobs:
 
       - name: Setup pixi
         uses: prefix-dev/setup-pixi@v0.8.14
-
+        with:
+          run-install: false
+          
       - name: Build wheel
         working-directory: external
         run: pixi run build-wheel
