--- a/external/pyproject.toml
+++ b/external/pyproject.toml
@@ -2,6 +2,7 @@
 name = "cea-external-tools"
 description = "External tools for City Energy Analyst, mainly containing C++ components e.g. DAYSIM and CRAX"
 readme = "README.md"
+requires-python = "<=3.12,>=3.8"
 authors = [
     { name = "Reynold Mok", email = "reynold.mok@arch.ethz.ch" }
 ]
