Set parallel build level for wheel build task
Adds CMAKE_BUILD_PARALLEL_LEVEL=4 to the build-wheel task to enable parallel builds when running 'uv build'. This aligns the build-wheel task with the setup-dev task for consistent build performance.

--- a/external/pyproject.toml
+++ b/external/pyproject.toml
@@ -46,7 +46,7 @@ platforms = [
 
 [tool.pixi.tasks]
 setup-dev = {cmd = "CMAKE_BUILD_PARALLEL_LEVEL=4 uv pip install -ve . --group dev --no-build-isolation"}
-build-wheel = {cmd = "uv build"}
+build-wheel = {cmd = "CMAKE_BUILD_PARALLEL_LEVEL=4 uv build"}
 
 [tool.pixi.dependencies]
 # For arrow headers files
