Add macos-15 to build and test matrix
Updated the GitHub Actions workflow to include macos-15 in the OS matrix for both build and test jobs. This allows CI to run on the latest macOS version in addition to existing platforms.

--- a/.github/workflows/build-external-tools.yml
+++ b/.github/workflows/build-external-tools.yml
@@ -24,7 +24,10 @@ jobs:
       matrix:
         # FIXME: macos-13 unable to compile crax
         # Ignore macos-13 for now
-        os: [ubuntu-latest, windows-latest, macos-latest] # macos-13 for x86_64, macos-latest for arm64
+        os: [
+          ubuntu-latest,
+          windows-latest,
+          macos-latest, macos-15] # macos-13 for x86_64, macos-latest (macos-14) for arm64
 
     steps:
       - uses: actions/checkout@v4
@@ -87,7 +90,7 @@ jobs:
       actions: read # Download artifacts
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest, macos-15]
         # python-version: ['3.10', '3.11', '3.12']
         python-version: ["3.12"] # Test only 3.12 for now
 
