Specify shell for Test wheel step in workflow
Adds 'shell: bash' to the 'Test wheel' step in the build-external-tools GitHub Actions workflow to ensure the correct shell is used for the script execution. This fixes windows path separator error when installing using pip.

--- a/.github/workflows/build-external-tools.yml
+++ b/.github/workflows/build-external-tools.yml
@@ -107,6 +107,7 @@ jobs:
           path: wheels/
 
       - name: Test wheel
+        shell: bash
         run: |
           python -m pip install wheels/*.whl
           python -c "import cea_external_tools; print(f'✓ Package version: {cea_external_tools.__version__}')"
