--- a/.github/workflows/build-external-tools.yml
+++ b/.github/workflows/build-external-tools.yml
@@ -50,15 +50,13 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         working-directory: external
         run: |
+          ENV_ROOT=$(dirname "$(dirname "$(pixi run python -c 'import sys,os;print(sys.executable)')")")
+          export LD_LIBRARY_PATH="$ENV_ROOT/lib:$LD_LIBRARY_PATH"
+
           pixi add auditwheel
-          # Set LD_LIBRARY_PATH to include pixi lib
-          ARROW_LIB=$(pixi run python -c "import pyarrow; print(pyarrow.get_library_dirs()[0])")
-          export LD_LIBRARY_PATH="$ARROW_LIB:$LD_LIBRARY_PATH"
-          echo "LD_LIBRARY_PATH: $LD_LIBRARY_PATH"
-          # Show what libraries the wheel needs
-          pixi run auditwheel show dist/*.whl
-          # Repair the wheel
+          auditwheel show dist/*.whl
           pixi run auditwheel repair dist/*.whl --wheel-dir dist/
+          auditwheel show dist/*manylinux*.whl
           rm dist/*-linux_*.whl  # Remove original linux wheel, keep manylinux wheel
 
       - name: Upload wheel artifacts
