Use pixi to run auditwheel commands in workflow
Replaces direct calls to auditwheel with 'pixi run auditwheel' in the build-external-tools GitHub Actions workflow to ensure auditwheel is executed within the pixi environment.

--- a/.github/workflows/build-external-tools.yml
+++ b/.github/workflows/build-external-tools.yml
@@ -54,9 +54,9 @@ jobs:
           export LD_LIBRARY_PATH="$ENV_ROOT/lib:$LD_LIBRARY_PATH"
 
           pixi add auditwheel
-          auditwheel show dist/*.whl
+          pixi run auditwheel show dist/*.whl
           pixi run auditwheel repair dist/*.whl --wheel-dir dist/
-          auditwheel show dist/*manylinux*.whl
+          pixi run auditwheel show dist/*manylinux*.whl
           rm dist/*-linux_*.whl  # Remove original linux wheel, keep manylinux wheel
 
       - name: Upload wheel artifacts
