--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,7 +62,10 @@ dependencies = [
     "xlrd",
     "xlwt",
     "wntr>=1.3.2,<2", # Needs to be installed via pip since conda-forge does not provide osx-arm64 builds
-    "py4design-cea"
+    "py4design-cea",
+
+    # CEA external tools
+    "cea-external-tools"
 ]
 
 [dependency-groups]
