Update cea-external-tools dependency version
Set minimum version of cea-external-tools to 0.2.0 in pyproject.toml dependencies.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,7 @@ dependencies = [
     "py4design-cea",
 
     # CEA external tools
-    "cea-external-tools"
+    "cea-external-tools>=0.2.0"
 ]
 
 [dependency-groups]
