Set MACOSX_DEPLOYMENT_TARGET in build workflow
Added MACOSX_DEPLOYMENT_TARGET environment variable to the build-external-tools GitHub Actions workflow to ensure compatibility with macOS 13.0+, as required by CRAX.

--- a/.github/workflows/build-external-tools.yml
+++ b/.github/workflows/build-external-tools.yml
@@ -45,6 +45,8 @@ jobs:
           CMAKE_BUILD_PARALLEL_LEVEL: 4
           # Enable verbose output for debugging if needed
           VERBOSE: 1
+          # Set minimum macOS version (CRAX requires 13.3+)
+          MACOSX_DEPLOYMENT_TARGET: ${{ matrix.os == 'macos-latest' && '13.0' || (matrix.os == 'macos-15' && '13.0' || '') }}
 
       - name: Repair wheel with auditwheel (Linux only)
         if: matrix.os == 'ubuntu-latest'
