--- a/.dockerignore
+++ b/.dockerignore
@@ -12,17 +12,23 @@ __pycache__
 .env
 .venv
 venv
+.pixi
 
 # PyCharm
 .idea
 
 bin
+dist
 docs
 logo
 notebooks
 setup
 
 *.md
+
+# external
+external/.pixi
+external/dist/
 
 # Docker files
 Dockerfile
