--- a/.github/workflows/build-external-tools.yml
+++ b/.github/workflows/build-external-tools.yml
@@ -23,11 +23,9 @@ jobs:
     strategy:
       matrix:
         # FIXME: macos-13 unable to compile crax
+        # macos-13 for x86_64, macos-latest (macos-14) for arm64
         # Ignore macos-13 for now
-        os: [
-          ubuntu-latest,
-          windows-latest,
-          macos-latest, macos-15] # macos-13 for x86_64, macos-latest (macos-14) for arm64
+        os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
       - uses: actions/checkout@v4
@@ -105,7 +103,7 @@ jobs:
       actions: read # Download artifacts
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest, macos-15]
+        os: [ubuntu-latest, windows-latest, macos-latest]
         # python-version: ['3.10', '3.11', '3.12']
         python-version: ["3.12"] # Test only 3.12 for now
 
