Remove verbose flag during pip install
This prevents too verbose outputs during installation in the workflow. It is currently not needed for debug.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
           cache: true
 
       - name: Install CEA
-        run: pixi run pip install -v .
+        run: pixi run pip install .
 
       - name: Run unit tests
         run: pixi run cea test --type unittest
