Add pytest-cov to test dependencies and coverage task
Included pytest-cov in the test dependency group and added a new 'coverage' task to run pytest with coverage reporting.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,7 +70,7 @@ dependencies = [
 
 [dependency-groups]
 lint = ["ruff"]
-test = ["pytest"]
+test = ["pytest", "pytest-cov"]
 docs = ["setuptools", "sphinx"]
 dev = [{include-group = "test"}, {include-group = "lint"}, {include-group = "docs"}]
 
@@ -138,6 +138,7 @@ platforms = [
 cea = "cea"
 server = "cea dashboard"
 test = "cea test --type integration"
+coverage = "pytest --cov=cea cea/tests/"
 
 # Development tasks
 lint = {cmd = "ruff check --fix ."}
