--- a/cea/default.config
+++ b/cea/default.config
@@ -1879,6 +1879,10 @@ min-ratio-as-main-use.type= RealParameter
 min-ratio-as-main-use.help= Set the minimum threshold (inclusive) for a use type to be considered as the main use of a building. A valid value ranges from 0 to 1.
 min-ratio-as-main-use.category = Filter by building construction time, type and use type
 
+context =
+context.type = PlotContextParameter
+context.help = Dict that describes the context for the plot e.g. hour_start, hour_end
+context.nullable = True
 
 [plots-demand]
 
