--- a/cea/default.config
+++ b/cea/default.config
@@ -1904,9 +1904,9 @@ y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
 
 [plots-solar]
 
-y-metric-to-plot = roofs_top, walls_north, walls_east, walls_south, walls_west
+y-metric-to-plot = total, roofs_top, walls_north, walls_east, walls_south, walls_west
 y-metric-to-plot.type = MultiChoiceParameter
-y-metric-to-plot.choices = roofs_top, walls_north, walls_east, walls_south, walls_west
+y-metric-to-plot.choices = total, roofs_top, walls_north, walls_east, walls_south, walls_west
 y-metric-to-plot.help = Select the building envelope surface(s) to plot for the Y-axis: electricity yield and/or heat yield, if any.
 
 y-metric-unit = kWh
