--- a/cea/default.config
+++ b/cea/default.config
@@ -134,7 +134,7 @@ building-structure-type.help = Type of building structure to use for the new con
 
 insulation-type = EPS
 insulation-type.type = ChoiceParameter
-insulation-type.choices = EPS, XPS, PUR, rock wool, glass wool, hemp
+insulation-type.choices = EPS, XPS, PUR, rock wool, glass wool, cellulose
 insulation-type.help = Type of insulation to use for the new constructions. 
     Together with the insulation thickness, a realistic estimation of the material emission will be made.
 
@@ -146,10 +146,10 @@ insulation-thickness.help = Thickness of the insulation to use for the new const
 
 cladding-type = plaster
 cladding-type.type = ChoiceParameter
-cladding-type.choices = plaster, aluminium, stainless steel, glass, stone, masonry, wood, ceramic, none
+cladding-type.choices = lime plaster, aluminium, stainless steel, glass, stone, brick, wooden, ceramic
 cladding-type.help = Type of cladding to use for the new constructions. 
     Note that the cladding type is different from the building structure type. For example, a concrete building can have 
-    a brick cladding. if the cladding type is set to "none", the new constructions will not have a cladding.
+    a brick cladding.
 
 [trees-helper]
 trees =
