functional construction_helper

--- a/cea/default.config
+++ b/cea/default.config
@@ -114,11 +114,10 @@ fix-overlapping-geometries.type = BooleanParameter
 fix-overlapping-geometries.help = Tries to eliminate overlapping building volumes (and subsequent double counting) by fixing overlaps of ground-surface polygons and retaining only the tallest of the overlapping buildings.
 
 [construction-helper]
-construction-prefix = new_construction
-construction-prefix.type = StringParameter
-construction-prefix.help = Name of the overarching construction to be created. This will be used as a prefix 
-    for the names of the new constructions created by this tool, including roof, wall, floor, and window constructions.
-construction-prefix.nullable = true
+construction-description = new_construction
+construction-description.type = StringParameter
+construction-description.help = Name of the overarching construction to be created. This will appear in the description
+     of the new constructions created by this tool, including roof, wall, floor, and window constructions.
 
 database-region = Switzerland
 database-region.type = ChoiceParameter
@@ -138,10 +137,9 @@ insulation-type.choices = EPS, XPS, PUR, rock wool, glass wool, cellulose
 insulation-type.help = Type of insulation to use for the new constructions. 
     Together with the insulation thickness, a realistic estimation of the material emission will be made.
 
-insulation-thickness = medium (around 10 cm)
-insulation-thickness.type = ChoiceParameter
-insulation-thickness.choices = thick (around 20 cm), medium (around 10 cm), thin (around 5 cm), none
-insulation-thickness.help = Thickness of the insulation to use for the new constructions. 
+insulation-thickness = 10
+insulation-thickness.type = RealParameter
+insulation-thickness.help = Thickness of the insulation to use for the new constructions in cm. 
     Together with the insulation type, a realistic estimation of the material emission will be made.
 
 cladding-type = plaster
