--- a/cea/scripts.yml
+++ b/cea/scripts.yml
@@ -670,7 +670,7 @@ Visualisation:
     description: This Feature plots bar chart of the results of building energy demand forecasting
     interfaces: [cli, dashboard]
     module: cea.visualisation.plot_main
-    parameters: ['general:scenario', plots-general, plots-demand]
+    parameters: ['general:scenario', plots-general, plots-demand, plots-building-filter]
     input-files:
       - [get_total_demand]
       - [get_building_architecture]
@@ -682,7 +682,7 @@ Visualisation:
     description: This Feature plots bar chart of the results of solar energy technologies' potential assessment
     interfaces: [cli, dashboard]
     module: cea.visualisation.plot_main
-    parameters: ['general:scenario', plots-general, plots-solar]
+    parameters: ['general:scenario', plots-general, plots-solar, plots-building-filter]
     input-files:
       - [get_building_architecture]
       - [get_zone_geometry]
