config and filter setting

--- a/cea/default.config
+++ b/cea/default.config
@@ -1924,3 +1924,7 @@ y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
 
 
 [plots-comfort-chart]
+buildings =
+buildings.type = BuildingsParameter
+buildings.help = List of buildings selected to plot. Leave blank when to select all.
+
