--- a/cea/scripts.yml
+++ b/cea/scripts.yml
@@ -686,3 +686,15 @@ Visualisation:
     input-files:
       - [get_building_architecture]
       - [get_zone_geometry]
+
+  - name: plot-comfort-chart
+    label: Plot - Building Comfort Chart
+    short_description: Plot comfort and discomfort hours for buildings
+    description: This Feature plots comfort and discomfort hours for buildings
+    interfaces: [cli, dashboard]
+    module: cea.visualisation.plot_comfort_chart
+    parameters: ['general:scenario', plots-comfort-chart, plots-building-filter]
+    input-files:
+      - [get_total_demand]
+      - [get_building_architecture]
+      - [get_zone_geometry]
