functional timeline generator for individual building

--- a/cea/default.config
+++ b/cea/default.config
@@ -433,6 +433,15 @@ operational = true
 operational.type = BooleanParameter
 operational.help = Estimate emissions due to supply systems operation (allocated according to the supply-systems input database)
 
+[emission-timeline]
+buildings = 
+buildings.type = BuildingsParameter
+buildings.help = List of buildings considered in the emission timeline generation.
+
+end-year = 2100
+end-year.type = IntegerParameter
+end-year.help = The last year that will be included into the timeline.
+
 [extract-reference-case]
 destination = {general:scenario}/../..
 destination.type = PathParameter
